# app

./: .gitignore  .pre-commit-config.yaml  README.md  gunicorn_conf.py  requirements.txt
.envik/: pyvenv.cfg
app/: config.py
app/api/: router.py
app/celery/: tasks.py
app/db/models/: user.py
app/repositories/: abstract.py
app/repositories/alchemy/: auth.py  presentation.py
frontend/: .eslintrc.json  .prettierrc.json  Dockerfile  example.env  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/api/: auth.ts  fonts.ts  presentation.ts
frontend/src/app/: fonts.ts  globals.css  layout.tsx
hakaton/: .dockerignore  Dockerfile  Makefile  docker-compose.yml  gunicorn_conf.py  pyproject.toml  requirements.txt
hakaton/app/: app.py  config.py  entrypoint.py
hakaton/app/api/: dependencies.py
hakaton/app/api/v1/: router.py
hakaton/app/api/v1/auth/: route.py
hakaton/app/api/v1/presentation/: router.py  serializers.py
hakaton/app/api/v1/presentation/views/: __init__.py  presentation.py
hakaton/app/auth/: jwt_auth.py
hakaton/app/celery/: tasks.py  worker.py
hakaton/app/db/: mappers.py
hakaton/app/db/migrations/versions/: f7e5c8b96870_.py
hakaton/app/db/models/: base.py  presentation.py
hakaton/app/repositories/alchemy/: base.py  presentation.py
hakaton/app/repositories/redis/: base.py
hakaton/utils/clients/: http.py  minio.py  mlclient.py  redis.py
hakaton/utils/parsing/chat_bot/: chat_bot.py
hakaton/utils/parsing/file/: docx_type.py
nginx/: docker-compose.yml  nginx.conf
utils/clients/: http.py
(+112 files in other folders)
