[project]
name = 'weather-service'
version = '0.1.0'
description = 'Сервис погоды'

dependencies = [
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "gunicorn",
    "uvicorn",
    "requests",
    "celery",
    "sentry-sdk",
    "pre-commit",
    "SQLAlchemy",
    "geoalchemy2",
    "shapely",
    "redis",
    "pytest",
    "psycopg2-binary",
    "alembic",
    "alembic-postgresql-enum",
    "pyproj",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pytest-asyncio",
]

[tool.setuptools]
py-modules = []

[tool.isort]
profile = 'black'
line_length = 120
lines_after_imports = 2
force_alphabetical_sort_within_sections = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
max-line-length = 120
